# InWorldz-Viewer

./: .gitignore  install.xml  sha1generate-win.bat
doc/: contributions.txt
indra/cmake/: CopyWinLibs.cmake
indra/llcommon/: lldate.cpp  lldate.h  llqueuedthread.cpp  llversionviewer.h
indra/llmessage/: CMakeLists.txt  sound_ids.cpp
indra/llrender/: llgl.cpp
indra/llvfs/: llvfs.cpp
indra/llwindow/: llwindowwin32.cpp
indra/newview/: Info-SecondLife.plist  Info-Snowglobe.plist  llagent.cpp  llagent.h  llcommandlineparser.cpp  llfloatercustomize.cpp  llimpanel.cpp  llinventorybridge.cpp  llpanelface.h  llpanelnetwork.cpp  llspatialpartition.cpp  lltexturefetch.cpp  lltoolpie.cpp  llviewerimage.cpp  llviewermenu.cpp  llviewermessage.cpp  llviewerregion.cpp  llvoavatar.cpp
indra/newview/English.lproj/: InfoPlist.strings
indra/newview/app_settings/: .svnignore  settings_per_account.xml
indra/newview/character/: .svnignore
indra/newview/res/: .svnignore  viewerRes.rc
libraries/x86_64-linux/: .svnignore
linden/: .svnignore  install.xml
linden/doc/: asset_urls.txt  contributions.txt
linden/indra/: .svnignore  CMakeLists.txt  Linux-ReleaseFast-build.sh  Linux64-build.sh  develop.py
linden/indra/cmake/: .svnignore  00-Common.cmake  Audio.cmake  Boost.cmake  BuildVersion.cmake  CMakeLists.txt  CopyWinLibs.cmake  FindAPR.cmake  FindBerkeleyDB.cmake  FindCARes.cmake  FindELFIO.cmake  FindGooglePerfTools.cmake  FindJsonCpp.cmake  FindMySQL.cmake  FindOpenJPEG.cmake  FindXmlRpcEpi.cmake  GStreamer010Plugin.cmake  InWorldz.cmake  JsonCpp.cmake  LLAddBuildTest.cmake  LLAudio.cmake  LLKDU.cmake  OPENAL.cmake  UI.cmake  UnixInstall.cmake  Variables.cmake  Versions.cmake  ViewerMiscLibs.cmake  WebKitLibPlugin.cmake
linden/indra/copy_win_scripts/: start-client.py
linden/indra/iw_imagebase/: CMakeLists.txt  imagebaseforkdu.cpp  imagebaseforkdu.h
linden/indra/iw_kdu_loader/: CMakeLists.txt  inworldzJ2C.cpp  inworldzJ2C.h  inworldzJ2c.h  is_approx_equal_fraction.h  iw_kdu_loader.cpp  iw_kdu_loader.h  lldefs.h  llformat.cpp  llformat.h  llkdumem.cpp  llkdumem.h  llmath.h  stdafx.cpp  stdafx.h  stdtypes.h
linden/indra/iw_kdu_loader/includes/: llformat.h  llmath.h
linden/indra/linux_crash_logger/: llcrashloggerlinux.cpp
linden/indra/llaudio/: CMakeLists.txt  llaudiodecodemgr.cpp  llaudioengine.cpp  llaudioengine.h  llaudioengine_fmod.cpp  llaudioengine_openal.cpp  llaudioengine_openal.h  llvorbisencode.cpp
linden/indra/llcharacter/: llcharacter.cpp  llcharacter.h  llhandmotion.cpp  llkeyframemotion.cpp  llkeyframewalkmotion.cpp
linden/indra/llcommon/: CMakeLists.txt  indra_constants.h  llapr.cpp  llapr.h  llchat.h  llerror.cpp  llmemory.h  llpreprocessor.h  llqueuedthread.cpp  llqueuedthread.h  llsdserialize_xml.cpp  llsecondlifeurls.cpp  llsecondlifeurls.h  llstring.cpp  llstring.h  llthread.cpp  llthread.h  lltimer.cpp  lltimer.h  lluri.cpp  lluri.h  llversionviewer.h  llworkerthread.cpp  llworkerthread.h  metaproperty.h  metapropertyt.h
linden/indra/llcrashlogger/: llcrashlogger.cpp
linden/indra/llimage/: CMakeLists.txt  inworldzj2cimpl.h  llimage.cpp  llimage.h  llimagej2c.cpp  llimagej2c.h  llimageworker.cpp  llimageworker.h
linden/indra/llimagej2coj/: llimagej2coj.cpp
linden/indra/llinventory/: lleconomy.cpp  llinventory.cpp  llinventory.h  llnotecard.cpp  llparcel.cpp  llpermissions.cpp  llpermissions.h  llsaleinfo.cpp  llsaleinfo.h  lltransactionflags.cpp
linden/indra/llmath/: llvolume.cpp  llvolume.h  llvolumemgr.cpp  xform.h
linden/indra/llmessage/: CMakeLists.txt  llares.cpp  llassetstorage.cpp  llcircuit.cpp  llcircuit.h  llcurl.cpp  llcurl.h  lldatapacker.cpp  lldatapacker.h  llhttpassetstorage.cpp  llhttpassetstorage.h  llhttpclient.cpp  llhttpclient.h  llhttpclientadapter.h  llhttpnode.h  llinstantmessage.cpp  lliohttpserver.cpp  lliohttpserver.h  lliosocket.cpp  llmessagereader.h  llmessagetemplate.cpp  llmessagetemplate.h  llmessagetemplateparser.cpp  llmessagetemplateparser.h  llmime.cpp  llpacketbuffer.cpp  llpacketring.cpp  llpumpio.cpp  llsdmessagereader.cpp  llsdrpcserver.h  llservicebuilder.cpp  llservicebuilder.h  llsocks5.cpp  lltransfersourceasset.cpp  lltransfertargetfile.h  llurlrequest.cpp  llurlrequest.h  message.cpp  message.h  net.cpp  (+2 more)
linden/indra/llplugin/: CMakeLists.txt  llpluginclassmedia.cpp  llpluginclassmedia.h  llplugininstance.cpp  llplugininstance.h  llpluginmessage.h  llpluginmessagepipe.cpp  llpluginprocesschild.cpp  llpluginprocesschild.h  llpluginprocessparent.cpp  llpluginprocessparent.h  llpluginsharedmemory.cpp  llpluginsharedmemory.h
linden/indra/llprimitive/: llprimitive.cpp
linden/indra/llrender/: llfontgl.cpp  llfontregistry.cpp  llfontregistry.h  llgl.h  llimagegl.cpp  llrender.cpp
linden/indra/llui/: llbutton.cpp  llcombobox.cpp  llcombobox.h  llctrlselectioninterface.h  llfloater.cpp  lllineeditor.cpp  lllineeditor.h  llmenugl.cpp  llmenugl.h  llnotifications.cpp  llresmgr.cpp  llscrolllistctrl.cpp  llscrolllistctrl.h  llspinctrl.cpp  llspinctrl.h  lltextbox.h  lltexteditor.cpp  lltexteditor.h  llui.cpp  llview.cpp  llview.h
linden/indra/llvfs/: lldir.cpp  lldir_mac.cpp  lldir_solaris.cpp  lldir_win32.cpp  lllfsthread.cpp  lllfsthread.h  llvfs.cpp  llvfs.h
linden/indra/llwindow/: llwindow.h  llwindowmacosx.cpp  llwindowmacosx.h  llwindowsdl.cpp  llwindowsdl.h  llwindowwin32.cpp  (+1 more)
linden/indra/media_plugins/: CMakeLists.txt
linden/indra/media_plugins/base/: media_plugin_base.h
linden/indra/media_plugins/gstreamer010/: CMakeLists.txt  llmediaimplgstreamer.h  llmediaimplgstreamer_syms.cpp  llmediaimplgstreamer_syms.h  llmediaimplgstreamertriviallogging.h  llmediaimplgstreamervidplug.cpp  llmediaimplgstreamervidplug.h  media_plugin_gstreamer010.cpp
linden/indra/media_plugins/quicktime/: media_plugin_quicktime.cpp
linden/indra/media_plugins/webkit/: CMakeLists.txt  media_plugin_webkit.cpp
linden/libraries/: .svnignore
linden/licenses/: LICENSE-logos.txt
linden/scripts/: install.py  update_version_files.py  version_update.py
scripts/automated_build_scripts/: opensrc-build.sh
(+1374 files in other folders)
